# systemc-vp-workspace

./: .claudeignore  .gitignore  CLAUDE.md  CMakeLists.txt  README.md
baremetal/: CMakeLists.txt
baremetal/cortex-a53/: CMakeLists.txt
baremetal/cortex-a53/src/: hello_fullduplex.c  hello_i2c_isr.c  hello_isr.c  hello_usart.c  hello_usart2.c
peripherals/: CMakeLists.txt
peripherals/i2c_stm32/: CMakeLists.txt
peripherals/i2c_stm32/include/: i2c_stm32.h
peripherals/i2c_stm32/src/: i2c_stm32.cc
peripherals/serial_bridge/: CMakeLists.txt
peripherals/serial_bridge/include/: serial_bridge.h
peripherals/serial_bridge/src/: serial_bridge.cc
peripherals/usart/: CMakeLists.txt
peripherals/usart/include/: usart.h
peripherals/usart/src/: usart.cc
peripherals/usart2/: CMakeLists.txt
peripherals/usart2/include/: Usart.h  Usart_regdefs.h  Usart_types.h  usart2.h
peripherals/usart2/src/: Usart.cc  usart2.cc
